--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"issues": "https://github.com/ptrnov/yii2-postman4excel/issues",
 		"source": "https://github.com/ptrnov/yii2-postman4excel"
 	},
+	"minimum-stability": "stable",
 	"require": {
 		"yiisoft/yii2": "*",
 		"phpoffice/phpexcel": "*"
