--- a/composer.json
+++ b/composer.json
@@ -3,14 +3,13 @@
 	"description": "Excel on view or console cronjobs",
 	"type": "yii2-extension",
 	"keywords": ["yii2","ptr","nov","extension","postman4excel","postman","excel","postman4"],
-	"license": "BSD-3-Clause",
+	"license": "MIT",
 	"authors": [
 		{
 			"name": "Piter Novian",
 			"email": "ptr.nov@gmail.com"
 		}
 	],
-	"minimum-stability": "dev",
 	"support": {
 		"issues": "https://github.com/ptrnov/yii2-postman4excel/issues",
 		"source": "https://github.com/ptrnov/yii2-postman4excel"
