--- a/composer.json
+++ b/composer.json
@@ -14,10 +14,11 @@
 		"issues": "https://github.com/ptrnov/yii2-postman4excel/issues",
 		"source": "https://github.com/ptrnov/yii2-postman4excel"
 	},
+	"minimum-stability": "dev",
+	"prefer-stable" : true,
 	"require": {
 		"yiisoft/yii2": "*"
 	},
-	"minimum-stability": "dev",
 	"autoload": {
 		"psr-4": {
 			"ptrnov\\postman4excel\\": ""
