--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
 		"issues": "https://github.com/ptrnov/yii2-postman4excel/issues",
 		"source": "https://github.com/ptrnov/yii2-postman4excel"
 	},
-	"require": {		
+	"require": {
+		"yiisoft/yii2": "*",
+		"phpoffice/phpexcel": "*"	
 	},
 	"autoload": {
 		"psr-4": {
